--- a/package.json
+++ b/package.json
@@ -11,13 +11,55 @@
   "dependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "next": "15.4.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@google/generative-ai": "^0.24.0",
+    "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
+    "@mui/x-date-pickers": "^7.28.0",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-google-maps/api": "^2.20.6",
+    "@tanstack/react-query": "^5.68.0",
+    "axios": "^1.8.3",
+    "class-variance-authority": "^0.7.1",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "firebase": "^11.4.0",
+    "framer-motion": "^12.0.3",
+    "heroicons": "^2.2.0",
+    "lucide-react": "^0.482.0",
+    "motion": "^12.0.3",
+    "react-avatar": "^5.0.3",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.2.1",
+    "react-day-picker": "^9.6.3",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-router": "^6.22.0",
+    "react-router-dom": "^6.22.0",
+    "react-toastify": "^11.0.3",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
+    "globals": "^15.14.0",
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
   }
